2008-07-22  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_bblock_insert_after_ins): Properly link up with the next
	instruction in the ins==NULL case.

2008-07-23  Zoltan Varga  <vargaz@gmail.com>

	* mini-ops.h: Add OP_X86_OUTARG_ALIGN_STACK.

	* mini-x86.c: Fix osx build.

	* mini-amd64.c (mono_arch_output_basic_block): Handle varargs in the CALL_REG
	opcodes as well.

	* method-to-ir.c (mono_spill_global_vars): Avoid fusing a load+store into the
	instruction for non int sized variables.

	* method-to-ir.c (mono_method_to_ir2): Fix an assert in the LDFLD
	implementation.

2008-07-23  Robert Jordan  <robertj@gmx.net>

	* method-to-ir.c: Fix MSVC build.

2008-07-22  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_method_to_ir2): When calling native code which returns
	a non int sized type, widen it to an int since newer versions of gcc seem to
	generate code which needs this.

	* ssa2.c abcremoval2.c: Fix warnings.

	* *: Merge the Linear IR branch.

	The original branch is at trunk/branches/vargaz/mini-linear-il, and
	the ChangeLog file there describes all the changes done over the years. 
	Further documentation can be found at www.mono-project.com/Linear_IL.

2008-07-21  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c (get_call_info): Winx64 fix for passing floats.
	  The float param registers and other param registers must be the 
	  same index on Windows x64.

	Contributed under MIT/X11 license.

2008-07-21  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c: Make the previous fix GC safe.

2008-07-21  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile.am (version.h): Allow a trailing '/' in the repository URL.

2008-07-21  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c (get_call_info): Correcting the case for MONO_TYPE_TYPEDBYREF
	  on Winx64.  This type will not be passed on the stack (ArgOnStack), but 
	  ArgValuetypeAddrInIReg instead.

	Contributed under MIT/X11 license.

2008-07-21  Zoltan Varga  <vargaz@gmail.com>
