@@ -1,5 +1,8 @@
 2008-07-22  Zoltan Varga  <vargaz@gmail.com>
 
+	* method-to-ir.c (ADD_WIDEN_OP): New macro to insert a widening op when
+	two a binop with different sized arguments is emitted.
+
 	* mini.c (mono_bblock_insert_after_ins): Properly link up with the next
 	instruction in the ins==NULL case.
 
